# local-rag

./: .gitignore  .gitmodules  CMakeLists.txt  guide.md  pyrightconfig.json  requirements.txt
src/: LlamaEngine.hpp  VectorStore.hpp  app.py  main.cpp
src/app/: test.py
src/data-prep/: 01_extract_pdf.py  01_extract_pdf_using_marker.py  02_cleanup_markdown.py  03_chunking_markdown.py
src/data-prep/utils/: utils.py
src/embedding/: embedder.py
